syntax = "proto3";

package pb;

import "validate/validate.proto";

option go_package = "proto/pb;pb";

service UserService {
    rpc Login(LoginReq) returns (LoginResp);
    rpc Register(RegisterReq) returns (RegisterResp);
    rpc GetInfo(GetInfoReq) returns (GetInfoResp);
    rpc Ban(BanReq) returns (BanResp);
    rpc ModifyInfo(ModifyInfoReq) returns (ModifyInfoResp);
}

message Ban {
    string reason = 1; // @gotags: json:"reason" form:"reason" binding:"required"
    int64 ban_at = 2; // @gotags: json:"ban_at" form:"ban_at" binding:"required"
    int64 unban_at = 3; // @gotags: json:"unban_at" form:"unban_at" binding:"required"
}

message User{
    int64 id = 1;
    string name = 2;
    string email = 3;
    string photo_url = 4;
    string description = 5;
    Ban ban = 6;
    repeated string roles = 7;
}

message LoginReq {
    string email = 1; // @gotags: json:"email" form:"email" binding:"required"
    string password = 2; // @gotags: json:"password" form:"password" binding:"required"
}

message LoginResp {
    string token = 1;
    User user = 2;
}

message RegisterReq {
    // @gotags: json:"name" form:"name" binding:"required"
    string name = 1 [(validate.rules).string = {
        pattern: "^[a-zA-Z]\\w+{2, 14}$"
    }];
    // @gotags: json:"email" form:"email" binding:"required"
    string email = 2 [(validate.rules).string = {
        pattern: "^\\w+@\\w+\\.\\w+$"
        max_bytes: 256
    }];
    // @gotags: json:"password" form:"password" binding:"required"
    string password = 3 [(validate.rules).string = {
        max_bytes: 256
        min_bytes: 8
    }];
}

message RegisterResp {
    string token = 1;
    User user = 2;
}

message GetInfoReq {
    int64 id = 1;
}

message GetInfoResp {
    User user = 1;
}

message BanReq {
    int64 admin_id = 1;
    int64 user_id = 2; // @gotags: json:"user_id" form:"user_id" binding:"required"
    Ban ban = 3;
}

message BanResp {
    User user = 1;
}

message ModifyInfoReq {
    int64 id = 1;
    string description = 2; // @gotags: json:"description" form:"description"
    bytes photo = 3;
    string photo_type = 4;
}

message ModifyInfoResp {
    User user = 1;
}